# mcp-salesforce-server

./: .dockerignore  .gitignore  DEPLOYMENT-AWS.md  DEPLOYMENT-CLOUD-RUN.md  DEPLOYMENT-GCP-VM.md  DEPLOYMENT.md  Dockerfile  README.md  deploy.sh  entrypoint.sh  health_wrapper.py  pyproject.toml  salesforce_mcp_server.py  simple_server.py
scripts/: TROUBLESHOOTING.md  claude_setup.sh  cleanup_docker.sh  delete_gcp_images.sh  deploy_sf_login_test.sh  deploy_sf_soap_login_test.sh  deploy_to_aws.sh  deploy_to_vm.sh  restart_mcp_server.sh  run_mcp_server.sh  test_sf_login.py  test_sf_soap_login.py  verify_mcp_server.sh
src/salesforce/: __init__.py  server.py  streaming_mcp_server.py  test_mcp_server.py
