[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-salesforce-connector"
version = "0.1.8"
description = "A Model Context Protocol (MCP) server implementation for Salesforce integration"
requires-python = ">=3.11"
keywords = ["mcp", "llm", "salesforce"]
dependencies = [
    "mcp",
    "simple-salesforce",
    "python-dotenv",
    "pytest>=8.4.1",
    "uvicorn",
    "starlette",
    "httpx",
]
license = { text = "MIT" }
authors = [
    { name = "Suman G", email = "suman.gunaganti@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/smn2gnt/MCP-Salesforce"

[project.scripts]
salesforce = "src.salesforce:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
simple-salesforce = { git = "https://github.com/simple-salesforce/simple-salesforce.git" }
